--- a/index.html
+++ b/index.html
@@ -52,23 +52,28 @@
         }
 
         .contact-icons {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px;
             margin-top: 15px;
         }
 
-        .contact a {
+        .contact-icons a {
             display: inline-block;
-            margin-right: 15px;
-            padding: 5px 10px;
+            padding: 8px 12px;
             background-color: #0c0c63;
             color: white;
             border-radius: 5px;
             text-decoration: none;
             transition: all 0.3s ease;
+            font-size: 14px;
         }
 
-        .contact a:hover {
+        .contact-icons a:hover {
             transform: translateY(-2px);
             box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            background-color: #0d0d92;
         }
 
         .experience-item, .education-item {
@@ -102,7 +107,7 @@
 
         .theme-toggle-icon {
             position: fixed;
-            top: 20px;
+            bottom: 20px;
             right: 20px;
             background-color: #0c0c63;
             color: white;
@@ -112,12 +117,18 @@
             height: 50px;
             font-size: 24px;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.4s ease;
             box-shadow: 0 2px 10px rgba(0,0,0,0.2);
         }
 
         .theme-toggle-icon:hover {
             transform: rotate(180deg);
+        }
+
+
+        a:hover {
+            color: #c3c3d1;
+            text-decoration: solid;
         }
 
         .dark-mode {
@@ -137,9 +148,13 @@
             border-bottom-color: #a8e8e3;
         }
 
-        .dark-mode .contact a {
+        .dark-mode .contact-icons a {
             background-color: #a8e8e3;
             color: #1f1f1f;
+        }
+
+        .dark-mode .contact-icons a:hover {
+            background-color: #76c7c0;
         }
 
         .dark-mode .experience-item, .dark-mode .education-item {
@@ -155,6 +170,35 @@
             background-color: #a8e8e3;
             color: #1f1f1f;
         }
+
+        .dark-mode a {
+            color: #a8e8e3;
+        }
+
+        .dark-mode a:hover {
+            color: #073a36;
+            text-decoration: none;
+        }
+
+        @media (max-width: 600px) {
+            .container {
+                padding: 20px;
+                margin: 20px;
+            }
+
+            h1 {
+                font-size: 28px;
+            }
+
+            h2 {
+                font-size: 22px;
+            }
+
+            .contact a {
+                padding: 6px 10px;
+                font-size: 13px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -163,14 +207,16 @@
             <button class="theme-toggle-icon" onclick="toggleTheme()" id="theme-toggle">
                 🌓
             </button>
-            <h1>Emmanuel Oduro Lathbridge</h1>
+            <h1>EMMANUEL ODURO LATHBRIDGE</h1>
             <p class="contact">
-                Accra, GH · +233 249 576 941<br>
-                <a href="https://github.com/lathbridge" target="_blank">GitHub</a> 
+                Accra, GH · +233 249 576 941
+            </p>
+            <div class="contact-icons">
+                <a href="https://github.com/lathbridge" target="_blank">GitHub</a>
                 <a href="mailto:lathbridge51@gmail.com">Email</a>
                 <a href="https://lathbridge.netlify.app/" target="_blank">Portfolio</a>
                 <a href="https://www.linkedin.com/in/emmanuel-oduro-lathbridge-8b41b517a/" target="_blank">LinkedIn</a>
-            </p>
+            </div>
         </header>
 
         <section class="profile">
@@ -184,9 +230,9 @@
                 <h3>Software Developer, Asoriba Inc</h3>
                 <p>Oct 2022 – Sep 2024</p>
                 <ul>
-                    <li>Developed web applications with React, Next.js, TypeScript, Vue.js, integrating REST APIs; utilized Docker for containerization.</li>
+                    <li>Developed web applications with React, Next.js, TypeScript, Vue.js, integrating REST APIs.</li>
                     <li>Implemented automation testing with Selenium and manual testing to ensure project quality.</li>
-                    <li>Designed and optimized email templates.</li>
+                    <li>Designed and optimized email templates; utilized Docker for containerization.</li>
                 </ul>
             </div>
             <div class="experience-item">
@@ -281,7 +327,7 @@
                 document.getElementById('theme-toggle').innerHTML = '🌞';
             } else {
                 document.body.classList.remove('dark-mode');
-                document.getElementById('theme-toggle').innerHTML = '🌙';
+                document.getElementById('theme-toggle').innerHTML = '🌓';
             }
         }
 
