--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         .contact-icons {
             display: flex;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
             justify-content: center;
             gap: 10px;
             margin-top: 15px;
@@ -183,7 +183,7 @@
         @media (max-width: 600px) {
             .container {
                 padding: 20px;
-                margin: 20px;
+                margin: 0px;
             }
 
             h1 {
