--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emmanuel Oduro Lathbridge - Résumé</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <!-- my black hacker favicon below  -->
+    <!-- <link rel="icon" type="image/png" href="./black.png"> -->
+
+    <title>Lathbridge - Résumé</title>
     <style>
         body {
             background: linear-gradient(135deg, #020224, #0a0a3d);
